Русское наполнение, английские исправления

--- a/mainapp_ru/templates/mainapp_ru/base.html
+++ b/mainapp_ru/templates/mainapp_ru/base.html
@@ -24,7 +24,7 @@
       {% block content %}
 
       {% endblock %}
-
+      <div class="clr"></div>
     </div>
     {% block review %}
       <span class="review">Отзывы</span>
@@ -36,7 +36,7 @@
     <div class="footer">
 
       <footer class="footer">
-        <p>&copy 2018 COPYRIGHT</p>
+        <p>&copy; {% now "Y" %} COPYRIGHT</p>
       </footer>
     </div>
     </div>
