--- a/mainapp_ru/templates/mainapp_ru/life_entry/links.html
+++ b/mainapp_ru/templates/mainapp_ru/life_entry/links.html
@@ -1,4 +1,4 @@
-{% extends 'mainapp_en/life.html' %}
+{% extends 'mainapp_ru/life.html' %}
 {% load staticfiles %}
 
 {% block content %}
@@ -8,6 +8,7 @@
     <p><a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html">Services Canada:</a></p>
     <p><a href="https://www.ontario.ca/page/serviceontario">Services Ontario:</a></p>
     <p><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency:</a></p>
+    <p><a href="#">YMCA:</a></p>
   </div>
   <br>
 </article>
