--- a/mainapp_ru/templates/mainapp_ru/client_assesment_form.html
+++ b/mainapp_ru/templates/mainapp_ru/client_assesment_form.html
@@ -1,4 +1,4 @@
-{% extends 'mainapp_en/base.html' %}
+{% extends 'mainapp_ru/base.html' %}
 {% load staticfiles %}
 {% block title %}
   {{title}}
@@ -12,9 +12,9 @@
   <script src='https://www.google.com/recaptcha/api.js?hl=en' async defer></script>
 {% endblock %}
 {% block content %}
-<h1 class='form-h1'>Clien Assesment Form</h1>
+<h1 class='form-h1'>Форма оценки клиента</h1>
 <hr>
-<p class='form-p'>Fill out this form to find out if you're qualified to immigrate to Canada</p>
+<p class='form-p'>Заполните эту форму для оценки возможности иммигрировать в Канаду</p>
 <form method="post" action="" id="clientForm">
   {% csrf_token %}
   <div>
