--- a/mainapp_ru/templates/mainapp_ru/immigration_entry/caips.html
+++ b/mainapp_ru/templates/mainapp_ru/immigration_entry/caips.html
@@ -2,12 +2,11 @@
 {% load staticfiles %}
 
 {% block content %}
-<h1 class="heading">{{in_home_en.h1}}</h1>
+<h1 class="heading">{{in_home_ru.h1}}</h1>
 <article class="content">
   <div class="content-inner">
-    <p>{{in_home_en.paragraph1}}</p>
-    <p>{{in_home_en.paragraph2}}</p>
-    <p>{{in_home_en.paragraph3}}</p>
-</div>
+    <p><strong class='first-word-bold'>{{in_home_ru.paragraph1}}</strong> {{in_home_ru.paragraph2}}</p>
+  </div>
+  <br>
 </article>
 {% endblock %}
