--- a/mainapp_ru/templates/mainapp_ru/index.html
+++ b/mainapp_ru/templates/mainapp_ru/index.html
@@ -6,14 +6,12 @@
 {% endblock %}
 
 {% block content %}
-<article class="content">
   <h1 class="heading">{{home_ru.h1}}</h1>
+  <article class="content">
   <p class="content-inner">{% autoescape off %}{{home_ru.paragraph1}}{% endautoescape %}</p>
   <p class="content-inner">{{home_ru.paragraph2}}</p>
-  <p class="content-inner">{{home_ru.paragraph3}}</p>
-  <p class="content-inner">{{home_ru.paragraph4}}</p>
 </article>
   <div class="request-info">
-    Запросить дополнительную информацию
+    <a href="{% url 'mainapp_ru:education_form' %}">Отправить заявку на образование в Канаде.</a>
   </div>
 {% endblock %}
