--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -99,7 +99,7 @@ nav ul li {
     }
 form.menu_search{
     display: inline-block;
-    margin: .6em -7px 0 0;
+    margin: .6em -7px -3em 0;
     font-size: .9em;
     color: #8c8c8c;
 }
