--- a/mainapp_en/templates/mainapp_en/404.html
+++ b/mainapp_en/templates/mainapp_en/404.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class='err_img'></div>
+    <p>ERROR - PAGE NOT FOUND</a></p>
+    <p>Sorry, but the page you looking for could not be found.</p>
     <p>Go back to <a href="http://127.0.0.1">main page</a></p>
 </body>
 </html>
