--- a/static/static/css/404.css
+++ b/static/static/css/404.css
@@ -8,10 +8,10 @@ body{
     background-color: #fefefe;
 }
 div.err_img{
-    margin: 5em auto 0;
+    margin: 0 auto;
     max-width: 46em;
     min-height: 29em;
-    background-image: url('../img/404.png');
+    background-image: url('../img/404_.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -20,6 +20,7 @@ p{
     display: block;
     text-align: center;
     font-size: 1.3em;
+    padding-bottom: .1em;
 }
 a{
     text-decoration: underline;
