--- a/mainapp_en/templates/mainapp_en/form_base.html
+++ b/mainapp_en/templates/mainapp_en/form_base.html
@@ -19,9 +19,9 @@
   </ul>
 {% endblock %}
 {% block content %}
-<h1 class='center first'>Client Assesment Form</h1>
+<h1 class='center'><a href="{% url 'mainapp_en:client_assesment_form' %}" class="this">Client Assesment Form</a></h1>
 <p class=''>Fill out <a href="{% url 'mainapp_en:client_assesment_form' %}" class="this">this</a> form to find out if you're qualified to immigrate to Canada</p>
-<h1 class='center'>Education Form</h1>
+<h1 class='center'><a href="{% url 'mainapp_en:education_form' %}" class="this">Education Form</a></h1>
 <p class=''>Fill out <a href="{% url 'mainapp_en:education_form' %}" class="this">this</a> form to find out if you're qualified to take education in Canada</p>
 
 {% endblock %}
