--- a/mainapp_ru/templates/mainapp_ru/about.html
+++ b/mainapp_ru/templates/mainapp_ru/about.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 {% block content %}
+<h1 class="heading">{{home_ru.h1}}</h1>
 <article class="content">
-  <h1 class="heading">{{home_ru.h1}}</h1>
   <p class="content-inner">{{home_ru.paragraph1}}</p>
   <p class="content-inner">{{home_ru.paragraph2}}</p>
   <p class="content-inner">{{home_ru.paragraph3}}</p>
@@ -15,6 +15,6 @@
 </article>
   <div class="request-info">
 
-    Запросить <a href="https://www.youtube.com/watch?v=pkBl6z8XoQ8" class="sanya">д</a>ополнительную информацию
+    Запросить дополнительную информацию
   </div>
 {% endblock %}
