--- a/mainapp_ru/templates/mainapp_ru/client_assesment_form.html
+++ b/mainapp_ru/templates/mainapp_ru/client_assesment_form.html
@@ -27,7 +27,7 @@
 
 </div>
 <div class="g-recaptcha" data-sitekey="6Ldgz2oUAAAAAI6MlKZOVBUnDGAh64oYcmF8Ohys"></div>
-<button type="submit" name="button">Send</button>
+<button type="submit" name="button">Отправить</button>
 </form>
 {% endblock %}
 {% block review %}
@@ -64,7 +64,6 @@ function borderChange(e){
     maritalStList[i].style.display = 'none';
     maritalStList[i].previousElementSibling.style.display = 'none';
     maritalStList[i].previousElementSibling.previousElementSibling.style.display = 'none';
-    console.log('kek')
 };
   console.log(maritalSt[0].selected);
 
@@ -74,7 +73,6 @@ function borderChange(e){
         maritalStList[i].style.display = 'block';
         maritalStList[i].previousElementSibling.style.display = 'block';
         maritalStList[i].previousElementSibling.previousElementSibling.style.display = 'inline-block';
-        console.log('kek1');
       }
     }
     else{
@@ -82,7 +80,6 @@ function borderChange(e){
         maritalStList[i].style.display = 'none';
         maritalStList[i].previousElementSibling.style.display = 'none';
         maritalStList[i].previousElementSibling.previousElementSibling.style.display = 'none';
-        console.log('kek');
       }
     }
   }
