--- a/mainapp_ru/templates/mainapp_ru/education_form.html
+++ b/mainapp_ru/templates/mainapp_ru/education_form.html
@@ -27,7 +27,7 @@
 
 </div>
 <div class="g-recaptcha" data-sitekey="6Ldgz2oUAAAAAI6MlKZOVBUnDGAh64oYcmF8Ohys"></div>
-<button type="submit" name="button">Send</button>
+<button type="submit" name="button">Отправить</button>
 </form>
 {% endblock %}
 {% block review %}
