--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -177,13 +177,12 @@ nav ul li a:active {
 }
 .left-side{
     width: 35%;
-    /* background-color: #f5f5f5; */
     display: block;
     float: left;
     position: relative;
-    top: 3.5em;
+    top: 3.3em;
     margin-bottom: 2em;
-    border-right: 2px solid #d8d8d8;
+    /* border-right: 2px solid #d8d8d8; */
 }
 .left-side ul {
     list-style: none;
@@ -194,15 +193,15 @@ nav ul li a:active {
 .left-side ul li a{
     text-decoration: none;
     padding: .2em;
-    border: 0px solid #e7e7e7;
+    /* border: 0px solid #e7e7e7; */
     border-radius: 5px;
-    background-color: #e7e7e7;
+    background-color: #f8f8f8;
 }
 .left-side ul li a:hover{
     transition-timing-function:linear;
     transition-duration: .3s;
     color: #922;
-    background-color: #f5f5f5;
+    background-color: #f8f8f8;
     /* border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px; */
     border-bottom: 2px solid #922;
@@ -227,8 +226,8 @@ h1{
 a.this{
     text-decoration: none;
     border-bottom: 2px solid #555;
-    font-size:1.2em;
-    font-weight: bolder;
+    font-size:1em;
+    font-weight: bold;
 }
 a.this:hover{
     text-decoration: none;
@@ -493,6 +492,7 @@ form button {
   background: rgb(64,199,129);
   box-shadow: 0 -3px rgb(53,167,110) inset, 2px 2px rgb(200,200,200);
   transition: 0.2s;
+  cursor: pointer;
 }
 form button:hover { background: rgb(53, 167, 110); }
 form button:active {
