--- a/mainapp_en/templates/mainapp_en/base0.html
+++ b/mainapp_en/templates/mainapp_en/base0.html
@@ -14,6 +14,7 @@
       {% block js %}
         <script type="text/javascript" src={% static "/js/langChange.js" %}></script>
       {% endblock %}
+      <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
 </head>
 <body>
   <div class="wrapper">
