--- a/mainapp_ru/templates/mainapp_ru/base0.html
+++ b/mainapp_ru/templates/mainapp_ru/base0.html
@@ -13,6 +13,7 @@
       {% endblock %}
       {% block js %}
         <script type="text/javascript" src={% static "/js/langChange.js" %}></script>
+      <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
       {% endblock %}
 </head>
 <body>
