--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -8,13 +8,10 @@
 }
 html, body {
     height: 100%;
-    /* #max-width: 1366px; */
 }
 
 .header {
     width: auto;
-    /* height: 2em;
-    padding: 0.5em; */
 }
 .search-info {
     #float:right;
@@ -41,7 +38,6 @@ html, body {
     font-weight: bold;
 }
 .cust-table{
-    /* border: 2px solid #e7e7e7; */
     width: 90%;
     margin: 0 auto;
     border-collapse: collapse;
@@ -99,7 +95,7 @@ nav ul li {
     }
 form.menu_search{
     display: inline-block;
-    margin: .6em -7px -3em 0;
+    margin: .6em -7px -3em .3em;
     font-size: .9em;
     color: #8c8c8c;
 }
@@ -147,29 +143,43 @@ form.menu_search input[type=search]:focus{
 }
 /* стилизуем ссылки */
 nav ul li a {
+    margin: 0 .3em;
+	padding: 0 .5em;
+    display: inline-block;
+    font-weight: 700;
+    font-size: .8em;
     color: #8c8c8c;
-	font-size: .8em;
-	font-weight: 700;
-	text-align: right;
-	text-transform: uppercase;
-	text-decoration: none;
-	padding: 10px 13px;
+    line-height: 1;
+    text-decoration: none;
+    position:relative;
+    text-align: right;
+    text-transform: uppercase;
 }
-nav ul li .active {
+nav ul li a:focus{
+    outline: none;
+}
+nav ul li a:after{
+    background-color: #922;
+    display:block;
+    content: '';
+    height: 2px;
+    width: 0%;
+    left: 50%;
+    position: absolute;
+    transition: width .3s ease-in-out;
+    transform: translateX(-50%)
+}
+nav ul li .active:after {
+    width:100%
+}
+nav ul li .active{
 	color: #922;
-	font-weight: 700;
-	border-bottom: 3px solid #922;
 }
-
-nav a:hover {
+nav a:hover:after {
+    width: 100%;
+}
+nav a:hover{
     color: #922;
-	font-weight: 700;
-	border-bottom: 2px solid #922;
-}
-nav ul li a:active {
-	color: #8c8c8c;
-	font-weight: 700;
-	border-bottom: 3px solid #8c8c8c;
 }
 
 .clr {
@@ -182,7 +192,6 @@ nav ul li a:active {
     position: relative;
     top: 3.3em;
     margin-bottom: 2em;
-    /* border-right: 2px solid #d8d8d8; */
 }
 .left-side ul {
     list-style: none;
@@ -193,7 +202,6 @@ nav ul li a:active {
 .left-side ul li a{
     text-decoration: none;
     padding: .2em;
-    /* border: 0px solid #e7e7e7; */
     border-radius: 5px;
     background-color: #f8f8f8;
 }
@@ -202,14 +210,11 @@ nav ul li a:active {
     transition-duration: .3s;
     color: #922;
     background-color: #f8f8f8;
-    /* border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px; */
     border-bottom: 2px solid #922;
 }
 .right-side{
     float:right;
     width: 64%;
-    /* border-left: 2px solid #d8d8d8; */
     padding-left: .7%;
     margin-bottom: 2em;
 }
@@ -221,7 +226,6 @@ h1{
 
 .right-side p{
     text-indent: 1em;
-    /* padding: 0 .5em; */
 }
 a.this{
     text-decoration: none;
@@ -237,7 +241,6 @@ a.this:hover{
 .content-box {
     margin-left: 12%;
     margin-right: 12%;
-    /* float: left; */
 }
 
 article.content{
@@ -247,9 +250,6 @@ article.content{
 article{
     margin-bottom: 1em;
 }
-/* .content-inner p{
-    background-color: #e7e7e7;
-} */
 .request-info>a{
     margin-left: 1em;
 }
@@ -266,19 +266,11 @@ article{
 }
 .content-ul{
     margin-left: 3em;
-    /* margin-top: 1em; */
     padding: 2%;
 }
-/* .content-ol{
-    margin-left: 3em;
-    margin-top: 1em;
-} */
 .content-ul>li{
     margin-bottom: .5em;
 }
-/* .content-ol>li{
-    margin-bottom: .5em;
-} */
 span.review {
     color: #8c8c8c;
 	font-size: .85em;
@@ -501,7 +493,7 @@ form button:active {
 }
 
 
-button::-moz-focus-inner,
+nav ul li a::-moz-focus-inner,button::-moz-focus-inner,
 input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
@@ -518,11 +510,7 @@ select:-moz-focusring * {
   color:#222; /* your normal text color here */
   text-shadow:none;
 }
-a.sanya{
-    text-decoration: none;
-    cursor: text;
-    margin-left:0;
-}
+
 div.footer {
     position: absolute;
     display: block;
@@ -541,4 +529,3 @@ div.footer {
     font-size: .8em;
 
 }
-/* #720x1280 - mobile */
