--- a/mainapp_en/templates/mainapp_en/base.html
+++ b/mainapp_en/templates/mainapp_en/base.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src={% static "/js/langChange.js" %}></script>
       {% endblock %}
       <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="wrapper">
@@ -25,13 +26,15 @@
 
       {% endblock %}
     </div>
+    <div class="clr_bottom"></div>
     {% block review %}
+<!--
       <span class="review">Reviews</span>
       <div class="review-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius deserunt ipsam reprehenderit, repudiandae quos numquam sapiente explicabo nesciunt optio, obcaecati, deleniti iure, beatae quod dignissimos. Numquam placeat quae cumque quisquam eveniet, quidem molestiae doloremque nulla est error expedita, omnis dolores maxime atque. Accusamus nam reiciendis magni impedit molestiae, et amet, mollitia fugiat facere ratione quaerat veniam possimus, labore deserunt, error ab quis! Optio laudantium nemo non reiciendis nobis nihil libero ullam voluptates, dolorum obcaecati ducimus, error repellat atque. Soluta asperiores eveniet, reprehenderit eius tempora inventore provident cupiditate porro rerum est, eligendi, blanditiis? Neque incidunt dicta praesentium qui at distinctio explicabo, doloribus earum animi, laudantium officiis ut vero dolor. Dicta nam ab, soluta provident iste architecto earum placeat magnam mollitia explicabo eaque, maxime amet blanditiis vero nobis rem dolores, non nisi harum voluptatum. Alias aperiam quidem nobis dolores adipisci inventore velit et doloribus totam est, eum minus libero tempora cupiditate ad, numquam voluptate commodi suscipit pariatur, aliquid eligendi nemo, esse distinctio expedita. Culpa laudantium harum reprehenderit ipsa! Possimus architecto officiis id praesentium beatae at dolores ex, qui vel laudantium voluptate nihil.
       </div>
+-->
     {% endblock %}
-      <div class="clr"></div>
       <div class="footer">
 
         <footer class="footer">
