--- a/mainapp_ru/templates/mainapp_ru/base0.html
+++ b/mainapp_ru/templates/mainapp_ru/base0.html
@@ -13,8 +13,9 @@
       {% endblock %}
       {% block js %}
         <script type="text/javascript" src={% static "/js/langChange.js" %}></script>
-      <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
       {% endblock %}
+      <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="wrapper">
@@ -34,15 +35,17 @@
     </div>
 
     </div>
-<div class="clr"></div>
+<div class="clr_bottom"></div>
+<!--
     <span class="review">Отзывы</span>
     <div class="review-content">
       Мне очень понравилась стажировка, организованная колледжем Upper Career College of Business and Technology (Toronto, Canada), - в рамках программы Understanding of International Marketplace - в финансовом отделе Sheraton Centre Hotel в Торонто. Я прошла курс Understanding International Marketplace (бизнес программа) и решила пройти стажировку в канадской компании, с тем чтобы получить опыт работы в Канаде и увеличить шансы на успешное получение работы в гостинице моей мечты. Я была впечатлена тем, что знания, которые я получила во время курса Business Essentials в UCCBT я применяла на практике каждый день. Кроме того, UCCBT помог мне подготовиться к работе с финансовыми отчетами, поскольку я получила знания об особенностях финансового планирования, бюджетирования, и работы с финансовыми потоками. Другая причина, почему я была рада возможности пройти стажировку состоит в том, что я могла наблюдать то, что финансист делает ежедневно, работая в офисе гостиницы. Не только работа с финансовым контролером гостиницы была полезной и дала мне опыт, поскольку все сотрудники в моем отделе были добры и терпеливы со мной. Они всегда объясняли мне то, что необходимо делать, а если вдруг возникали вопросы или проблемы, они брали тайм-аут в своем напряженном расписании, и помогали мне разобраться с работой. Мои задачи включали следующее: выписка счетов, расчет налогов за отчетный период, общий учет движения денежных средств, проверка соответствия поступившей оплаты выставленным счетам, а также административная работа в офисе. На мой взгляд, Sheraton Centre Торонто – отличная компания для работы, чтобы узнать о финансах и вложить время в развитие своей карьеры. Я настоятельно рекомендую UCCBT и программы стажировок для любого студента, который заинтересован в бизнесе!
     </div>
+-->
     <div class="footer">
 
       <footer class="footer">
-        <p>&copy 2018 COPYRIGHT</p>
+        <p>&copy; {% now "Y" %} COPYRIGHT</p>
       </footer>
     </div>
     </div>
